--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LeafIDE"
+        android:theme="@style/Theme.LeafIDE.SplashScreen"
         tools:ignore="UnusedAttribute">
 
         <activity
