--- a/renovate.json
+++ b/renovate.json
@@ -5,10 +5,9 @@
     ":dependencyDashboard"
   ],
   "forkProcessing": "enabled",
-  "automerge": false,
   "lockFileMaintenance": {
     "enabled": true,
-    "schedule": "after 10pm on sunday"
+    "schedule": "after 10pm on sunday",
     "automerge": false,
     "automergeType": "pr",
     "platformAutomerge": false
