--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: tgymnich/fork-sync@v2.0
         with:
           token: ${{ github.token }}
-          repo:  VidSync
+          repo: Leaf-IDE
           owner: scto
           base: master
           head: master
